--- a/includes/nav.html
+++ b/includes/nav.html
@@ -1,32 +1,60 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4 p-3 rounded">
-  <div class="container-fluid">
-    <a class="navbar-brand d-flex align-items-center" href="/">
-      <!-- <img src="/assets/images/profile_illustration.png" alt="Logo" width="30" height="30"
-        class="d-inline-block align-text-top me-2 rounded-circle bg-white"> -->
+
+<nav class="mb-4 bg-blue-600 px-4 py-3 text-white">
+  <div class="mx-auto flex max-w-7xl items-center justify-between">
+    <!-- Left: Brand -->
+    <a href="/" class="text-lg font-semibold hover:text-blue-200">
       My App
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+
+    <!-- Mobile toggle -->
+    <button
+      id="menu-btn"
+      class="rounded p-2 hover:bg-blue-500 lg:hidden"
+      aria-label="Toggle navigation"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-6 w-6"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke="currentColor"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M4 6h16M4 12h16M4 18h16"
+        />
+      </svg>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blog">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
-        </li>
+
+    <!-- Center / Right: Nav + Auth -->
+    <div
+      id="menu"
+      class="absolute left-0 top-full hidden w-full flex-col bg-blue-600 px-4 pb-4 lg:static lg:flex lg:w-auto lg:flex-row lg:items-center lg:gap-6 lg:bg-transparent lg:p-0"
+    >
+      <!-- Nav links -->
+      <ul class="flex flex-col gap-2 lg:flex-row lg:gap-6">
+        <li><a class="hover:text-blue-200" href="/">Home</a></li>
+        <li><a class="hover:text-blue-200" href="/blog">Blog</a></li>
+        <li><a class="hover:text-blue-200" href="/about">About</a></li>
+        <li><a class="hover:text-blue-200" href="/contact">Contact</a></li>
       </ul>
+
+      <!-- Auth -->
     </div>
+    <div class="hidden mt-3 lg:flex gap-4 border-t border-blue-500 pt-3 lg:mt-0 lg:border-0 lg:pt-0">
+        <a href="#" class="hover:text-blue-200">Login</a>
+        <a
+          href="#"
+          class="rounded bg-dark px-3 py-1 text-blue-600 hover:bg-blue-100"
+        >
+          Sign up
+        </a>
+      </div>
   </div>
 </nav>
+
 
 <script>
   (function () {
